2013-08-02  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad.c (init_validator): Add "Alarm" to valid threat values.

2013-08-01  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-gsa-logo): Add indicator icon on Overrides page
	for New Override.

2013-08-01  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (ovaldef-details, dfn_cert_adv-details): Remove bold
	from minor details ID so that they match the other pages.

2013-08-01  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_many): By default sort users by role.

2013-07-31  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (get_info_response): Add case for all errors except
	for the database missing one, otherwise a permission error looks like
	one of the database is missing.

2013-07-31  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (html-edit-permission-form): Access subject info directly
	under SUBJECT, now that it is available there.

2013-07-30  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (init_validator): Add parentheses to comment chars.

2013-07-30  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad.c (init_validator): Fix regexp for severity. Add
	severity_optional. Make new_severity alias of severity_optional. Add
	custom_severity, new_severity_list.

	* src/gsad_omp.c (create_override_omp, edit_override_omp): No longer
	send new_threat. Add selection between listed and text field
	new_severity.

	* src/html/omp.xsl (html-create-override-form, html-edit-override-form):
	Replace new_threat fields with list of presets for new_severity
	and radio buttons to choose between list and text field.

2013-07-29  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/gsad.xsl (html-gsa-logo): Apply trashcan indicator icons.

2013-07-29  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (create_schedule_omp): Switch to new style so that